{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 36,
  "lineage": "6b5910a8-783f-fe23-dad6-9d7116b9d2dc",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0aa81142b46726bb1",
            "domain": "vpc",
            "id": "eipalloc-0f16a7c7f94dd9300",
            "network_interface": "eni-08ec50fb401e98962",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-174-124-225.compute-1.amazonaws.com",
            "public_ip": "35.174.124.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "awesome_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:535518648590:instance/i-07b66e7e0dd0a1493",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b66e7e0dd0a1493",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-08ec50fb401e98962"
              }
            ],
            "primary_network_interface_id": "eni-08ec50fb401e98962",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "35.174.124.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00fc5f8e867022faf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4ce99daada0180",
            "tags": {
              "Name": "dev_web_server",
              "created_by": "John",
              "environment": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0659493e03c8ba06c"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.awesome_eip",
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_route_table_association.awesome_rt_accociate",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod",
            "module.server.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "awesome_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:internet-gateway/igw-0aa2971b3e2d78690",
            "id": "igw-0aa2971b3e2d78690",
            "owner_id": "535518648590",
            "vpc_id": "vpc-079335aac43fcdcd6"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "awesome_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-08ec50fb401e98962",
            "mac_address": "02:bb:d7:47:88:ad",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0659493e03c8ba06c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4ce99daada0180"
          },
          "dependencies": [
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "awesome_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07966cd9c8e64ed08",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa2971b3e2d78690",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "created_by": "John",
              "environment": "dev"
            },
            "vpc_id": "vpc-079335aac43fcdcd6"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "awesome_rt_accociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec26f74fe367f739",
            "route_table_id": "rtb-07966cd9c8e64ed08",
            "subnet_id": "subnet-0fd4ce99daada0180"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awesome_sg_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-0659493e03c8ba06c",
            "description": "Allow Web traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0659493e03c8ba06c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-allow_web_traffic",
            "name_prefix": "",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-079335aac43fcdcd6"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awesome_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0fd4ce99daada0180",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0fd4ce99daada0180",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "created_by": "John",
              "environment": "dev"
            },
            "vpc_id": "vpc-079335aac43fcdcd6"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:vpc/vpc-079335aac43fcdcd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e467454c567394aa",
            "default_route_table_id": "rtb-0a8a809c03b562605",
            "default_security_group_id": "sg-00e8f68aeb582c8f9",
            "dhcp_options_id": "dopt-bbec06de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-079335aac43fcdcd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a8a809c03b562605",
            "owner_id": "535518648590",
            "tags": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}